Change in Filer

--- a/resources/index.html
+++ b/resources/index.html
@@ -115,8 +115,7 @@
 
                                 <li class="dropdown-show"><a href="#">BRANDS</a>
                                     <ul class="mega-menu-wrap dropdown-nav">
-                                        <li class="mega-menu-item"><a href="#" class="mega-item-title">Most Popular Perfume Brands
-</a>
+                                        <li class="mega-menu-item"><a href="#" class="mega-item-title">Most Popular Perfume Brands</a>
                                             <ul><br>
                                                 <li><a href="#">Calvin Klein</a></li>
                                                 <li><a href="#">Yves Saint Laurent</a></li>
@@ -597,11 +596,11 @@
                             <span style="text-transform:uppercase;">Testers</span>
                         </a>
 
-                        <a href="#" data-toggle="tab">
+                        <a href="#cookwarPproduct" data-toggle="tab">
                             <span style="text-transform:uppercase;">Travel Size Mini's</span>
                         </a>
 
-                        <a href="#" data-toggle="tab">
+                        <a href="#bakewareProduct" data-toggle="tab">
                             <span style="text-transform:uppercase;">Perfume Samples</span>
                         </a>
 
