--- a/resources/cart.html
+++ b/resources/cart.html
@@ -119,8 +119,7 @@
 
                                 <li class="dropdown-show"><a href="#">BRANDS</a>
                                     <ul class="mega-menu-wrap dropdown-nav">
-                                        <li class="mega-menu-item"><a href="#" class="mega-item-title">Most Popular Perfume Brands
-</a>
+                                        <li class="mega-menu-item"><a href="#" class="mega-item-title">Most Popular Perfume Brands</a>
                                             <ul><br>
                                                 <li><a href="#">Calvin Klein</a></li>
                                                 <li><a href="#">Yves Saint Laurent</a></li>
